Menu visual on smaller screen fix
Upravený vzhľad menu pri menších obrazovkách

--- a/src/partials/style.css
+++ b/src/partials/style.css
@@ -57,4 +57,19 @@ body {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
+@media (max-width: 992px){
+	.navbar-expand-lg, .navbar-nav, .navbar-collapse{
+		flex-direction: row !important;
+		display: flex !important;
+	}
+}
+@media (max-width: 992px){
+	.menu-place{
+		display:none;
+	}
+}
+@media (max-width: 992px){
+	.header_main {
+    background: linear-gradient(45deg, transparent 0%, #080c50 0%);
+	}
+}
